# CMake-Cheatsheet

./: CMake_Cheatsheet.tex  README.md
examples/example1/: CMakeLists.txt
examples/example1/src/: main.cpp
examples/example2/: CMakeLists.txt
examples/example3/: CMakeLists.txt
examples/example4/: CMakeLists.txt
examples/example4/build2/: CMakeCache.txt
examples/example5/: CMakeLists.txt
examples/example6-find/: CMakeLists.txt
examples/example6-find/cmake/: FindVulkan.cmake
examples/example6-find/src/: VulkanContext.cpp  VulkanContext.hpp
examples/example6/somelib/: CMakeLists.txt  foo.hpp
examples/example6dyn/: CMakeLists.txt
examples/example6dyn/someexe/: CMakeLists.txt
examples/example6dyn/somelib/: CMakeLists.txt  foo.cpp
examples/example7/: CMakeLists.txt
examples/example7/someexe/: main.cpp
examples/example8/: CMakeLists.txt
examples/example8/someexe/: main.cpp
examples/example9/: CMakeLists.txt
examples/example9dyn/: CMakeLists.txt
examples/example9dyn/somelib/: foo.cpp  foo.hpp
